--- a/app/whiteboard.html
+++ b/app/whiteboard.html
@@ -14,7 +14,7 @@
         <div class="topbar">
             <ul class="topbar">
                 <li class="logo"><img src="resources/img/logo.svg"></li>
-                <li class="link"><a href="index.html">overview</a></li>
+                <li class="link"><a href="overview.html">overview</a></li>
                 <li class="link"><a href="whiteboard.html">whiteboard</a></li>
                 <li class="link"><a href="project_overview.html">project overview</a></li>
             </ul>
