--- a/app/overview.html
+++ b/app/overview.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MME: Projekte im WS 2021/22</title>
     <link rel="stylesheet" href="./resources/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+    <script>
+        $( function() {
+            $( "#sortable" ).sortable();
+        } );
+    </script>
 </head>
 
 <body>
     <div class="ui">
-        <h1>Repository Name - Issue Name</h1>
         <div class="topbar">
+            <h1>Repository Name</h1>
             <ul class="topbar">
                 <li class="logo"><img src="resources/img/logo.svg"></li>
                 <li class="link"><a href="overview.html">overview</a></li>
@@ -27,45 +34,57 @@
             </ul>
         </div>--->
 
-        <div class="cards">
+        <div class="cards" id="sortable">
+
             <div class="card">
-                <div class="header">
-                    <h2>Titel 1</h2>
-                </div>            
-                <div class="container">
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                <div class="card-inner">
+                    <div class="card-front">
+                        <div class="header">
+                            <h2>Titel 1</h2>
+                        </div>            
+                        <div class="container">
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                        </div>
+                        <div class="button-turn-card">
+                            turn
+                        </div>
+                    </div>
+                    <div class="card-back">
+                        <h2>Rückseite</h2>
+                        <div class="button-turn-card">
+                            turn
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="header">
-                    <h2>Titel 2</h2>
-                </div>            
-                <div class="container">
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="header">
-                    <h2>Titel 3</h2>
-                </div>            
-                <div class="container">
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                </div>
-            </div>
+
         </div>
 
         <div class="button-new-card">+</div>
+
     </div>
 
-    <!-- Template for single box, shown in whiteboard-->
+    <!-- Template for single box, shown in whiteboard  -->
     <template id="box-template">
         <div class="card">
-            <div class="header">
-                <h2>Titel 1</h2>
-            </div>
-          
-            <div class="container">
-                <p>Text 1</p>
+            <div class="card-inner">
+                <div class="card-front">
+                    <div class="header">
+                        <h2>Titel 1</h2>
+                    </div>            
+                    <div class="container">
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                    </div>
+                    <div class="button-turn-card">
+                        turn
+                    </div>
+                </div>
+                <div class="card-back">
+                    <h2>Rückseite</h2>
+                    <div class="button-turn-card">
+                        turn
+                    </div>
+                </div>
             </div>
         </div>
     </template>
