--- a/app/overview.html
+++ b/app/overview.html
@@ -41,18 +41,44 @@
                     <div class="card-front">
                         <div class="header">
                             <h2>Titel 1</h2>
+                            <input class="title-input" type="text"></input>
                         </div>            
                         <div class="container">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                            <input class="text-input" type="text"></input>
                         </div>
-                        <div class="button-turn-card">
+                        <div class="turn">
                             turn
                         </div>
                     </div>
                     <div class="card-back">
                         <h2>Rückseite</h2>
-                        <div class="button-turn-card">
+                        <div class="reverse">
+                            reverse
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <div class="header">
+                            <h2>Titel 2</h2>
+                            <input class="title-input" type="text"></input>
+                        </div>            
+                        <div class="container">
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                            <input class="text-input" type="text"></input>
+                        </div>
+                        <div class="turn">
                             turn
+                        </div>
+                    </div>
+                    <div class="card-back">
+                        <h2>Rückseite</h2>
+                        <div class="reverse">
+                            reverse
                         </div>
                     </div>
                 </div>
@@ -75,14 +101,14 @@
                     <div class="container">
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     </div>
-                    <div class="button-turn-card">
+                    <div class="turn">
                         turn
                     </div>
                 </div>
                 <div class="card-back">
                     <h2>Rückseite</h2>
-                    <div class="button-turn-card">
-                        turn
+                    <div class="reverse">
+                        reverse
                     </div>
                 </div>
             </div>
