--- a/app/whiteboard.html
+++ b/app/whiteboard.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MME: Projekte im WS 2021/22</title>
     <link rel="stylesheet" href="./resources/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+    <script>
+        $( function() {
+            $( "#sortable" ).sortable();
+        } );
+    </script>
 </head>
 
 <body>
@@ -34,18 +41,44 @@
                     <div class="card-front">
                         <div class="header">
                             <h2>Titel 1</h2>
+                            <input class="title-input" type="text"></input>
                         </div>            
                         <div class="container">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                            <input class="text-input" type="text"></input>
                         </div>
-                        <div class="button-turn-card">
+                        <div class="turn">
                             turn
                         </div>
                     </div>
                     <div class="card-back">
                         <h2>Rückseite</h2>
-                        <div class="button-turn-card">
+                        <div class="reverse">
+                            reverse
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <div class="header">
+                            <h2>Titel 2</h2>
+                            <input class="title-input" type="text"></input>
+                        </div>            
+                        <div class="container">
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                            <input class="text-input" type="text"></input>
+                        </div>
+                        <div class="turn">
                             turn
+                        </div>
+                    </div>
+                    <div class="card-back">
+                        <h2>Rückseite</h2>
+                        <div class="reverse">
+                            reverse
                         </div>
                     </div>
                 </div>
@@ -68,14 +101,14 @@
                     <div class="container">
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     </div>
-                    <div class="button-turn-card">
+                    <div class="turn">
                         turn
                     </div>
                 </div>
                 <div class="card-back">
                     <h2>Rückseite</h2>
-                    <div class="button-turn-card">
-                        turn
+                    <div class="reverse">
+                        reverse
                     </div>
                 </div>
             </div>
@@ -86,3 +119,5 @@
 </body>
 
 </html>
+
+
