--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MME: Projekte im WS 2021/22</title>
     <link rel="stylesheet" href="./resources/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@6.0.1/dist/iife/sdk.min.js"></script>
 </head>
 
 <body>
